@@ -1,0 +1,2 @@
+For 'Go to Line', use a Query box subclass with IDLE standard behavior
+and improved error checking.
